--- a/.babelrc
+++ b/.babelrc
@@ -25,16 +25,26 @@
 //     "@babel/plugin-transform-modules-commonjs"
 //   ]
 // }
-
-
 {
-  "presets": ["@babel/preset-env"],
+  "presets": [
+    [
+      "@babel/preset-env",
+      {
+        "useBuiltIns": "usage",
+        "corejs": 3,
+        "targets": {
+          "chrome": "58",
+          "ie": "11"
+        }
+      }
+    ]
+  ],
   "plugins": [
     [
       "@babel/plugin-transform-runtime",
-      {
-        "corejs": 3
-      }
+      // {
+      //   "corejs": 3
+      // }
     ]
   ]
 }
