--- a/.babelrc
+++ b/.babelrc
@@ -25,26 +25,35 @@
 //     "@babel/plugin-transform-modules-commonjs"
 //   ]
 // }
+// {
+//   "presets": [
+//     [
+//       "@babel/preset-env",
+//       {
+//         "useBuiltIns": "usage",
+//         "corejs": 3,
+//         "targets": {
+//           "chrome": "58",
+//           "ie": "11"
+//         }
+//       }
+//     ]
+//   ],
+//   "plugins": [
+//     [
+//       "@babel/plugin-transform-runtime"
+//     ]
+//   ]
+// }
+
 {
   "presets": [
     [
       "@babel/preset-env",
       {
-        "useBuiltIns": "usage",
-        "corejs": 3,
-        "targets": {
-          "chrome": "58",
-          "ie": "11"
-        }
+        "useBuiltIns": false,
+        "corejs": 3 // 當前 core-js 版本
       }
-    ]
-  ],
-  "plugins": [
-    [
-      "@babel/plugin-transform-runtime",
-      // {
-      //   "corejs": 3
-      // }
     ]
   ]
 }
